app/stylesheets/main.scss
/* ... */
@font-face {
  font-family: Conduit;
  src: url("../fonts/ConduitITCStd-BoldItalic.otf") format("opentype"), url("../fonts/ConduitITCStd-BoldItalic.woff") format("woff");
  font-weight: bold;
  font-style: italic;
}

@media #{$small-only} {
  body,html {
    font-size: 5vmin;
  }

  #logo {
    width: 70vmin;
  }

}
.inline-logo {
  height: 1em;
  margin-bottom: -1px;
  margin-left: 0.2em;
  margin-right: 0.2em;
}

.inline-logo-nomargin {
  margin-left: 0;
  margin-right: 0;
}

.menu .inline-logo {
  margin-right: -0.05em;
}

@media #{$medium-only} {
  body,html {
    // previously 4vmin, but that got too large
    // font-size: 26px;
    font-size: 4.5vmin;
  }
  #logo {
    width: 70vmin;
  }

}

.row {
  max-width: 100%;
}
body {
  background: #0f569a;
  font-family: Conduit;
  color: white;
  white-space: normal;
  background-repeat: no-repeat;
  // 100 * n_sections
}

h1, h2 {
  text-transform: uppercase;
}

h2 {
  line-height: 1.1;
}

.mainContainer {
  width: 100%;
  height: 100%;
}

section {
  position: relative;
  display: inline-block;
  width: 100vw;
  height: 100vh !important;
  margin: 0;
  vertical-align: top;
}

section {
    min-height: 700px;
  }

.work-arguments li, dd {
  white-space: normal;
  margin-top: 0.4em;
  margin-bottom: 1em;
}

dt {
  display: inline-block;
  color: rgba(5, 55, 100, 1);
  background-color: $white;
  font-weight: bold;
  text-transform: uppercase;
  padding: 0.4em 0.8em 0.1em 0.65em;
  margin: 0.75em 0em 1em 0em;
  vertical-align: middle;

}

.content, .slide {
  z-index: 1;
  width: 100vw;
  height: 100vh;
  position: relative;
}

.decorations {
  width: 100%;
}

.noMouse {
  pointer-events: none;
}

#mouseIcon {
  position: absolute;
  top: 85%;
  left: 50%;
  transform: translateX(-50%);
  text-transform: uppercase;
}

#logo {
  margin-top: 60px;
  margin-bottom: 20px;
}

#sunburstContainer {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.sunburst-svg {
  width: 100vmin;
  height: 100vmin;
}

#sunburst3 {
  position: absolute;
  top: 50%;
  margin-top: -800px;
  left: 50%;
  margin-left: -800px;
  z-index: -1;
}

#sunburst2 {
  //transform-origin: 50% 50%;
  //animation: orbitSpin 300s infinite linear;
}

@keyframes orbitSpin {
  0% { transform: rotate(0deg);}
  100% { transform: rotate(360deg);}
}

#sunburst path {
  stroke: rgb(60, 115, 165);
  fill-rule: evenodd;
}

#sunburst2 path {
  stroke: rgba(255, 255, 255, 1.0);
  fill-rule: evenodd;
}

#sunburst2 {
  opacity: 0.05;
}

.force-3d-accel {
  /* Safari performance smoothing */
  //transform: translateZ(0);
  //backface-visibility: hidden;
}

#moon {
  @extend .force-3d-accel;
  will-change: bottom, right, opacity;
  //display: none;
  opacity: 0;
  position: fixed;
  bottom: calc(5% - 155px);
  right: calc(0% - 155px);
  opacity: 1.0;
  z-index: 1;
  transition: right 1100ms ease, bottom 1100ms ease, opacity 350ms ease;
  @include breakpoint(medium down) {
    display: none !important;
  }
}

#sun {
  @extend .force-3d-accel;
  will-change: top, left, opacity;
  //display: none;
  opacity: 0;
  position: fixed;
  top: calc(-6% - 3 * 55px);
  left: calc(0% - 155px);
  opacity: 1.0;
  z-index: 1;
  transition: left 1100ms ease, top 1100ms ease, opacity 350ms ease;
  @include breakpoint(medium down) {
    display: none !important;
  }
}

.bgPixel {
  will-change: width, height;
  position: fixed;
  width: 0;
  height: 0;
  z-index: 0;
  opacity: 0.5;
  box-shadow: 0 0 5px;
  @include breakpoint(medium down) {
    display: none;
  }
  //transition: width 100ms ease, height 100ms ease;
}

.fp-responsive #moon, .fp-responsive #sun {
  opacity: 0 !important;
}

#fullpage > section {
  @include breakpoint(medium down) {
    padding-top: 2em;
  }
}

#thirdPage header {
  @include breakpoint(medium down) {
    padding-top: 3em;
  }
}

.menu-shadow {
  text-shadow: 0px 0px 2px rgba(12, 77, 120, 0.7);
}

.asterisk {
  font-size: 3.2rem;
  font-weight: bold;
  line-height: 0.5em;
  width: 2.5em;
  @include breakpoint(medium down) {
    display: block;
    width: 100%;
  }
  height: 0.5em;
  overflow: hidden;
}

#asterisk-image {
  height: 0.4em;
  width: 0.4em;
  vertical-align: top;
}

#menu-logo {
  display: none;
  height: 0.4em;
  width: 2em;
  margin-left: 0.1em;
  vertical-align: top;
  //margin-top: -0.4em;
  @extend .menu-shadow;
}


.asterisk:hover {
  cursor: pointer;
}

.menu.simple li {
  margin-right: 0;
}

.codestar-button {
  border: 1px solid white;
  background-color: transparent;
  text-transform: uppercase;
  font-weight: bold;
  padding-bottom: 0.6em;
}

.codestar-button:hover {
  background-color: rgba(255, 255, 255, 0.5);
}

.codestar-button:active {
  background-color: rgba(255, 255, 255, 0.7);
}

.codestar-button:focus {
  background-color: rgba(255, 255, 255, 0.3);
}

.codestar-button:visited {
  background-color: transparent;
}

.why {
  white-space: normal;
}

ul.why li:before,
ul.key_skills li:before {
  content: '+';
  font-size: 1.5em;
  font-weight: bold;
  padding-right: 0.5em;
  margin-left: -1em;
}

ul.key_skills li:before {
  margin-left: 0;
  padding-right: 0.2em;
}

ul.why li,
ul.key_skills li {
  list-style: none;
  line-height: normal;
  margin-bottom: 1.1em;
}

.team-link, .case-link {
  stroke-width: 1px;
  stroke: white;
}

.team-node, .case-node {
  cursor: pointer;
}

#teamTagline {
  font-style: italic;
}

#map {
  width: 100%;
  height: 100%;
  filter: grayscale(100%);
  pointer-events: none;
}

.contact_form_container {
  padding-right: 0;
}

#contact_form {
  margin-left: 10px;
}

.map_container {
  padding-left: 0;
  position: relative;
  height: 100%;
}

#contact_form .row .columns {
  padding-right: 2px;
  padding-left: 0;
}

#map {
  position: absolute;
}

.contact_data_table {
  width: 100%;
  background: rgb(0, 32, 65);
  opacity: 0.8;
  position: absolute;
  z-index: 5;
  bottom: 0;
  margin-bottom: 0;
}

.contact_data_table table {
  margin-bottom: 0;
}

.contact_data_table tbody {
  background: none;
  border: none;
}
/* ... */

